# src/routes/specification.routes.ts
@@ -1,16 +1,14 @@
 import { Router } from "express";
 
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
-import { listSpecificationsController } from "../modules/cars/useCases/listSpecifications";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/createSpecificationController";
+import { ListSpecificationsController } from "../modules/cars/useCases/listSpecifications/listSpecificationsController";
 
 const specificationsRoutes = Router();
+const createSpecificationController = new CreateSpecificationController();
+const listSpecificationsController = new ListSpecificationsController();
 
-specificationsRoutes.post("/", (request, response) => {
-    return createSpecificationController.handle(request, response);
-});
+specificationsRoutes.post("/", createSpecificationController.handle);
 
-specificationsRoutes.get("/", (request, response) => {
-    return listSpecificationsController.handle(request, response);
-});
+specificationsRoutes.get("/", listSpecificationsController.handle);
 
 export { specificationsRoutes };
